--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@capacitor/android": "^5.0.5",
     "@capacitor/core": "^5.0.5",
     "@capacitor/motion": "^5.0.4",
-    "phaser": "^3.60.0"
+    "phaser": "^3.60.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.5",
