--- a/package.json
+++ b/package.json
@@ -5,21 +5,28 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "open-android-studio": "/usr/local/android-studio/bin/studio.sh"
   },
   "author": "kadiraciktan",
   "license": "ISC",
   "dependencies": {
-    "@capacitor/android": "^5.0.5",
-    "@capacitor/core": "^5.0.5",
+    "@capacitor/android": "^5.3.0",
+    "@capacitor/core": "^5.3.0",
     "@capacitor/motion": "^5.0.4",
+    "@ionic-native/core": "^5.36.0",
+    "cordova-plugin-screen-orientation": "^3.0.3",
+    "es6-promise-plugin": "^4.2.2",
     "phaser": "^3.60.0",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.0.5",
+    "@capacitor/cli": "^5.3.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vite-plugin-static-copy": "^0.17.0"
-  }
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-screen-orientation"
+  ]
 }
