--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/android": "^5.3.0",
     "@capacitor/core": "^5.3.0",
     "@capacitor/motion": "^5.0.4",
+    "@capacitor/preferences": "^5.0.6",
     "@ionic-native/core": "^5.36.0",
     "cordova-plugin-screen-orientation": "^3.0.3",
     "es6-promise-plugin": "^4.2.2",
